refactor: removed img column, renamed img_id to image_id, renamed table to merchant_categories_main
